# vpn

./: .gitignore  README.md  client.pub
vpn_client_core/: Cargo.toml
vpn_client_core/src/: lib.rs
vpn_control_plane/: docker-compose.yml  main.go
vpn_data_plane/: .gitignore  Cargo.toml  build.rs  vpn.proto
vpn_data_plane/src/: main.rs
vpn_desktop_client/: CMakeLists.txt
vpn_desktop_client/recovery_tool/: CMakeLists.txt  main.cpp
vpn_desktop_client/src/: cryptomanager.cpp  cryptomanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signupdialog.cpp  signupdialog.h  vpn_client_core.h
